# SlicerTumorSegmentator

./: CMakeLists.txt  README.md  SlicerTumorSegmentator.py
Resources/UI/: SlicerTumorSegmentator.ui
